plugins {
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'java'
    id 'war'
}

group = 'cl.binter'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.5'
    testImplementation 'org.mockito:mockito-core:4.8.0'
    testImplementation 'junit:junit:4.13.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.5'
    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
    implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'






}

tasks.named('test') {
    useJUnitPlatform()
}

bootJar {
    baseName = 'api-users'
    version =  '1.0.0'
}
